--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@react-native-masked-view/masked-view": "0.2.6",
     "@react-native-clipboard/clipboard": "1.9.0",
     "react-native-gesture-handler": "2.3.1",
+    "react-native-prompt-android": "1.0.0",
     "react-native": "0.66.2"
   },
   "dependencies": {
