Add `react-native-reanimated` library

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@react-native-masked-view/masked-view": "0.2.6",
     "@react-native-clipboard/clipboard": "1.9.0",
     "react-native-fast-image": "8.5.11",
+    "react-native-reanimated": "2.17.0",
     "react-native": "0.71.8"
   },
   "dependencies": {
