--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@react-native-clipboard/clipboard": "1.9.0",
     "react-native-fast-image": "8.5.11",
     "react-native-reanimated": "2.17.0",
+    "react-native-gesture-handler": "2.10.2",
     "react-native": "0.71.8"
   },
   "dependencies": {
