--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-native-fast-image": "8.5.11",
     "react-native-reanimated": "2.17.0",
     "react-native-gesture-handler": "2.10.2",
+    "react-native-linear-gradient": "2.7.3",
     "react-native": "0.71.11"
   },
   "dependencies": {
